--- a/resume.html
+++ b/resume.html
@@ -157,7 +157,6 @@
 	  				<a href="https://github.com/LaFrish" target="_blank"><i class="fab fa-github"></i></a>
 	  				<a href="http://codepen.io/lafrish/" target="_blank"><i class="fab fa-codepen"></i></a>
 	  				<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fab fa-linkedin"></i></a>
-	  				<!-- <a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fab fa-facebook"></i></a> -->
 	  				<a href="https://twitter.com/lafrish" target="_blank"><i class="fab fa-twitter"></i></a>
   				 	<!-- <a href="https://www.behance.net/LaFrish" target="_blank"><i class="fab fa-behance"></i></a> -->
 					</div>
@@ -249,11 +248,10 @@
         </div>
       </div>
 	  </div>
-
 	</div>
-<footer> <span class="copy">© </span>Copyright 2018 Farishta Haider</footer>
-
-
+	<footer>
+		<span class="copy">© </span>Copyright 2018 Farishta Haider
+	</footer>
 
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
