Added Teresa quote to page

--- a/index.html
+++ b/index.html
@@ -1484,6 +1484,14 @@
 							<button class="gal_btn fade-in four" data-index="5">View Details</button>
 						</div>
 					</div>
+					<div class="marketing design showall grid-item gallery_container scrollflow -slide-top -opacity">
+						<img src="images/MontagePost.png" alt="Montage Marketing Social Media Post">
+						<div class='project_info' onclick=''>
+							Montage Social Media Post<br>
+							<div class="space20"></div>
+							<button class="gal_btn fade-in four" data-index="14">View Details</button>
+						</div>
+					</div>
 					<div class="web showall grid-item gallery_container scrollflow -slide-top -opacity">
 						<img src="http://i.imgur.com/ui8VhNu.png" alt="ProTrakr">
 						<div class='project_info' onclick=''>
@@ -1548,6 +1556,7 @@
 							<button class="gal_btn fade-in four" data-index="13">View Details</button>
 						</div>
 					</div> -->
+
 				</div>
 			</section>
 			<section id="contactMe">
@@ -1737,6 +1746,21 @@
 					<a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>Career Pathways</a>
 				</div>
 			</div> -->
+			<div id="14" class="pop">
+				<button class="gal_btn closeX hairline" data-index="14"></button>
+				<h6>Montage Marketing Social Media Post</h6>
+				<div class="techUsed">
+					<h3>
+						<strong>TECH:</strong>  <strong> | </strong>Adobe Illustrator <strong> | </strong>
+					</h3>
+				</div>
+				<p>A <strong>Social Media</strong> post for Montage Marketing.</p><p></p>
+
+				<!-- <div class="links scrollflow">
+					<a href="https://github.com/LaFrish/mamaBear" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
+					<a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>Career Pathways</a>
+				</div> -->
+			</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
