Updates to the description of Montage Marketing

--- a/index.html
+++ b/index.html
@@ -1748,18 +1748,18 @@
 			</div> -->
 			<div id="14" class="pop">
 				<button class="gal_btn closeX hairline" data-index="14"></button>
-				<h6>Montage Marketing Social Media Post</h6>
+				<h6>Montage Marketing</br>Social Media Posts</h6>
 				<div class="techUsed">
 					<h3>
 						<strong>TECH:</strong>  <strong> | </strong>Adobe Illustrator <strong> | </strong>
 					</h3>
 				</div>
-				<p>A <strong>Social Media</strong> post for Montage Marketing.</p><p></p>
+				<p><strong>Social Media</strong> posts for Montage Marketing.</p><p></p>
 
-				<!-- <div class="links scrollflow">
-					<a href="https://github.com/LaFrish/mamaBear" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
-					<a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>Career Pathways</a>
-				</div> -->
+				<div class="links scrollflow">
+					<a href="https://www.behance.net/gallery/70196581/Social-Media-Posts-for-Montage-Marketing" target= '_blank' class="button"><i class="fa fa-behance"></i>More Examples</a>
+					<!-- <a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>Career Pathways</a> -->
+				</div>
 			</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
