--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@
 				<p>A SharePoint page written for a special mother program at TEKsystems<strong></strong>.</p><p></p>
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/mamaBear" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
-					<a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>TEKvideo</a>
+					<a href="https://drive.google.com/file/d/1cI3azRqu4lX7YipcI-1KtO53e4gIhVXH/view?usp=sharing" target= '_blank' class="button"><i class="far fa-image"></i></i>Mama Bear</a>
 				</div>
 			</div>
 			<!-- <div id="13" class="pop">
